initial setup for password reset

--- a/www/templates/auth/password_reset.html
+++ b/www/templates/auth/password_reset.html
@@ -4,42 +4,32 @@
       <button class="button button-clear button-icon icon ion-ios-close-empty cancel-button" ng-click="cancelAuth()">
       </button>
     </div>
-    <h3 class="title">Login</h3>
+    <h3 class="title">Forgot Password?</h3>
   </ion-header-bar>
   <ion-content class="auth-content" has-bouncing="false">
     <div class="content-wrapper">
       <div class="row row-no-padding everything-but-legal">
         <div class="col">
-          <div class="row social-buttons-row">
-            <div class="col">
-              <button class="button button-block icon-left ion-social-facebook social-button facebook-button"
-                      ng-click="facebookSignIn()">
-                <span class="inner-text">Log in via Facebook</span>
-              </button>
-            </div>
-          </div>
           <form class="row form-container" novalidate>
             <div class="col">
               <div class="list">
                 <div class="item item-divider">
-                  <span>or log in using email</span>
+                  <span>Request passsword reset</span>
                 </div>
                 <div class="item item-divider" ng-if="errorMessage">
                   <span class="error-message" ng-bind="errorMessage"></span>
+                </div>
+                <div class="item item-divider" ng-if="infoMessage">
+                  <p class="success-message" ng-bind="successMessage"></p>
                 </div>
                 <label class="item item-input item-stacked-label">
                   <span class="input-label">Email</span>
                   <input type="email" placeholder="required" ng-model="credentials.email">
                 </label>
-                <label class="item item-input item-stacked-label">
-                  <span class="input-label">Password</span>
-                  <input type="password" placeholder="required" ng-model="credentials.password">
-                </label>
               </div>
-              <button class="button action-button button-block button-balanced" ng-click="login()">LOGIN</button>
+              <button class="button action-button button-block button-balanced" ng-click="requestPassword()">REQUEST PASSWORD RESET</button>
               <div class="col alt-actions-container">
-                <a class="button button-clear button-small button-stable forgot-password-button" ui-sref="intro.password_reset">Forgot
-                  Password?</a>
+                <a class="button button-clear button-small button-stable forgot-password-button" ui-sref="intro.login">Login</a>
               </div>
             </div>
           </form>
