add padding to policies page change to heading 2 for smaller font size on the heading

--- a/www/templates/policies/privacy.html
+++ b/www/templates/policies/privacy.html
@@ -8,8 +8,8 @@
     <h3 class="title">Privacy Policy</h3>
   </ion-header-bar>
 
-  <ion-content class="auth-content">
-    <h1>Content</h1>
+  <ion-content class="padding">
+    <h2>Privacy Policy</h2>
     <p>
         Our Service allows you to post, link, store, share and otherwise make available certain information, text, graphics, videos, or other material ("Content"). You are responsible for the
         Our Service allows you to post, link, store, share and otherwise make available certain information, text, graphics, videos, or other material ("Content"). You are responsible for the
