--- a/www/templates/policies/terms-and-conditions.html
+++ b/www/templates/policies/terms-and-conditions.html
@@ -8,8 +8,8 @@
     <h3 class="title">Terms and conditions</h3>
   </ion-header-bar>
 
-  <ion-content class="auth-content">
-    <h1>Content</h1>
+  <ion-content class="padding">
+    <h2>Terms of Service</h2>
     <p>
         Our Service allows you to post, link, store, share and otherwise make available certain information, text, graphics, videos, or other material ("Content"). You are responsible for the
         Our Service allows you to post, link, store, share and otherwise make available certain information, text, graphics, videos, or other material ("Content"). You are responsible for the
