--- a/www/templates/menu.html
+++ b/www/templates/menu.html
@@ -30,7 +30,7 @@
             <div class="item item-toggle">
               Only users I follow
               <label class="toggle toggle-positive">
-                <input type="checkbox" ng-model="activityData.filters.follow">
+                <input type="checkbox" ng-model="activityData.filters.follow" ng-checked="true">
                 <div class="track">
                   <div class="handle"></div>
                 </div>
@@ -51,24 +51,24 @@
             <div class="list">
               <label class="item item-input">Difficulty</label>
               <ion-list>
-                <ion-checkbox ng-model="activityData.filters.difficulty1">Easy</ion-checkbox>
-                <ion-checkbox ng-model="activityData.filters.difficulty2">Moderate</ion-checkbox>
-                <ion-checkbox ng-model="activityData.filters.difficulty3">Hard</ion-checkbox>
+                <ion-checkbox ng-model="activityData.filters.difficulty1" ng-checked="true">Easy</ion-checkbox>
+                <ion-checkbox ng-model="activityData.filters.difficulty2" ng-checked="true">Moderate</ion-checkbox>
+                <ion-checkbox ng-model="activityData.filters.difficulty3" ng-checked="true">Hard</ion-checkbox>
               </ion-list>
             </div>
             <div class="list">
               <label class="item item-input">Sport</label>
               <ion-list>
-                <ion-checkbox ng-model="activityData.filters.category[1]">Hiking</ion-checkbox>
-                <ion-checkbox ng-model="activityData.filters.category[2]">Cross-country skiing</ion-checkbox>
-                <ion-checkbox ng-model="activityData.filters.category[3]">Back country skiing</ion-checkbox>
-                <ion-checkbox ng-model="activityData.filters.category[4]">Paddling</ion-checkbox>
-                <ion-checkbox ng-model="activityData.filters.category[5]">Mountain biking</ion-checkbox>
-                <ion-checkbox ng-model="activityData.filters.category[6]">Horse riding</ion-checkbox>
-                <ion-checkbox ng-model="activityData.filters.category[7]">Climbing</ion-checkbox>
-                <ion-checkbox ng-model="activityData.filters.category[8]">Snow mobiling</ion-checkbox>
-                <ion-checkbox ng-model="activityData.filters.category[9]">Cross country ice skating</ion-checkbox>
-                <ion-checkbox ng-model="activityData.filters.category[10]">Foraging</ion-checkbox>
+                <ion-checkbox ng-model="activityData.filters.category[1]" ng-checked="true">Hiking</ion-checkbox>
+                <ion-checkbox ng-model="activityData.filters.category[2]" ng-checked="true">Cross-country skiing</ion-checkbox>
+                <ion-checkbox ng-model="activityData.filters.category[3]" ng-checked="true">Back country skiing</ion-checkbox>
+                <ion-checkbox ng-model="activityData.filters.category[4]" ng-checked="true">Paddling</ion-checkbox>
+                <ion-checkbox ng-model="activityData.filters.category[5]" ng-checked="true">Mountain biking</ion-checkbox>
+                <ion-checkbox ng-model="activityData.filters.category[6]" ng-checked="true">Horse riding</ion-checkbox>
+                <ion-checkbox ng-model="activityData.filters.category[7]" ng-checked="true">Climbing</ion-checkbox>
+                <ion-checkbox ng-model="activityData.filters.category[8]" ng-checked="true">Snow mobiling</ion-checkbox>
+                <ion-checkbox ng-model="activityData.filters.category[9]" ng-checked="true">Cross country ice skating</ion-checkbox>
+                <ion-checkbox ng-model="activityData.filters.category[10]" ng-checked="true">Foraging</ion-checkbox>
               </ion-list>
             </div>
           </ul>
