--- a/www/templates/policies/terms-and-conditions.html
+++ b/www/templates/policies/terms-and-conditions.html
@@ -9,14 +9,10 @@
   </ion-header-bar>
 
   <ion-content class="padding">
-    <h2>Terms of Service</h2>
-    <p>
-        Our Service allows you to post, link, store, share and otherwise make available certain information, text, graphics, videos, or other material ("Content"). You are responsible for the
-        Our Service allows you to post, link, store, share and otherwise make available certain information, text, graphics, videos, or other material ("Content"). You are responsible for the
-    </p>
-    <p>
-        Our Service allows you to post, link, store, share and otherwise make available certain information, text, graphics, videos, or other material ("Content"). You are responsible for the
-        Our Service allows you to post, link, store, share and otherwise make available certain information, text, graphics, videos, or other material ("Content"). You are responsible for the
-    </p>
+    <h2>Terms and Conditions</h2>
+
+    <h3></h3>
+
+
   </ion-content>
 </ion-view>
