add terms and condition content

--- a/www/templates/policies/privacy.html
+++ b/www/templates/policies/privacy.html
@@ -227,7 +227,8 @@
     </p>
 
     <p style="text-align:center">
-        &copy; Copyright AdventureMap 2016
+        &copy; Copyright AdventureMap 2016 |  Disclaimer (/disclaimer/) |
+        Privacy Policy (/privacy-policy/) |
     </p>
 
   </ion-content>
