--- a/www/templates/auth/login.html
+++ b/www/templates/auth/login.html
@@ -52,7 +52,8 @@
             <a ui-sref="intro.terms">Terms of Service</a>,
             <a ui-sref="intro.privacy">Privacy Policy</a>,
             <a ui-sref="intro.cookie">Cookie Policy</a> and
-            <a ui-sref="intro.disclaimer">Disclaimer</a></p>
+            <a ui-sref="intro.disclaimer">Disclaimer</a>
+          </p>
         </div>
       </div>
     </div>
