--- a/www/templates/create_activity.html
+++ b/www/templates/create_activity.html
@@ -31,6 +31,9 @@
           </select>
         </label>
         <div>
+          <button class='button button-block button-positive' ng-click="selectPhotos()">Add Images</button>
+        </div>
+        <div>
           <button class='button button-block button-positive' ng-click="createActivity()">Create</button>
         </div>
       </div>
