--- a/www/templates/create_activity.html
+++ b/www/templates/create_activity.html
@@ -16,8 +16,8 @@
       </label>
       <label class="item item-input">Difficulty: &nbsp;
         <span ng-if="activityData.difficulty == 1">Easy</span>
-        <span ng-if="activityData.difficulty == 2">Medium/span>
-        <span ng-if="activityData.difficulty == 3">Hard/span>
+        <span ng-if="activityData.difficulty == 2">Medium</span>
+        <span ng-if="activityData.difficulty == 3">Advanced</span>
       </label>
       <div class="item range">
         <input type="range" id="difficulty" ng-model="activityData.difficulty" ng-init="activityData.difficulty = 1" min="1" max="3" value="1" >
