--- a/www/templates/profile/my-activities.html
+++ b/www/templates/profile/my-activities.html
@@ -5,9 +5,9 @@
 
   <ion-nav-buttons side="right">
     <div>
-      <!--<a class="button" href="#/app/create_activity">-->
-        <!--New-->
-      <!--</a>-->
+      <a class="button" href="#/app/create_activity">
+        +
+      </a>
     </div>
   </ion-nav-buttons>
   <ion-content>
