Add first icon and style

--- a/scss/old-styles.scss
+++ b/scss/old-styles.scss
@@ -112,6 +112,14 @@ FILTERS
   bottom: 60px;
 }
 
+.menu-icon {
+  width: 40px;
+}
+
+.menu-icon-unselected {
+  opacity: .3;
+}
+
 /***************
 ACTIVITY PAGE SLIDER
  */
