Style icons in filter

--- a/scss/old-styles.scss
+++ b/scss/old-styles.scss
@@ -120,6 +120,14 @@ FILTERS
   opacity: .3;
 }
 
+.margin-10 {
+  margin: 10px;
+}
+
+.wrap-label {
+  flex-wrap: wrap !important;
+}
+
 /***************
 ACTIVITY PAGE SLIDER
  */
