--- a/www/templates/menu.html
+++ b/www/templates/menu.html
@@ -73,19 +73,18 @@
             </div>
             <div class="list">
               <div class="item item-input wrap-label">
-                <ion-list ng-repeat="category in category_icons" class="margin-10">
+                <ion-list ng-repeat="icon in category_icons" class="margin-10">
                   <!--<input type="checkbox" ng-model="activityData.filters.category[$index + 1]"-->
                   <!--ng-checked="activityData.filters.category[$index + 1]"-->
                   <!--style="background-image: url({{categories[$index]}});">-->
                   <!--<ion-checkbox ng-model="activityData.filters.category[$index + 1]"-->
                   <!--ng-checked="activityData.filters.category[$index + 1]"-->
                   <!--style="background-image: url({{categories[$index]}});">-->
-                  <div class="row"
-                       ng-click="activityData.filters.category[$index + 1] = !activityData.filters.category[$index + 1];">
-                    <img class="menu-icon" ng-src="{{category}}"
-                         ng-if="activityData.filters.category[$index + 1]">
-                    <img class="menu-icon menu-icon-unselected" ng-src="{{category}}"
-                         ng-if="!activityData.filters.category[$index + 1]">
+                  <div class="row" ng-click="activityData.filters.category[$index + 1] = !activityData.filters.category[$index + 1];">
+                    <div class="col-md-3">
+                      <img class="menu-icon" ng-src="{{icon}}"  ng-if="activityData.filters.category[$index + 1]">
+                      <img class="menu-icon menu-icon-unselected" ng-src="{{icon}}" ng-if="!activityData.filters.category[$index + 1]">
+                    </div>
                   </div>
                 </ion-list>
               </div>
