--- a/www/templates/menu.html
+++ b/www/templates/menu.html
@@ -1,4 +1,4 @@
-<ion-side-menus>
+<!--<ion-side-menus>
 
   <ion-side-menu-content>
     <ion-nav-bar class="bar-positive nav-title-slide-ios7">
@@ -7,9 +7,6 @@
   </ion-side-menu-content>
 
   <ion-side-menu side="left">
-    <header class="bar bar-header bar-positive">
-      <h1 class="title">Menu</h1>
-    </header>
     <ion-content class="has-header has-footer has-footer-filter">
       <ion-list>
         <ion-item id="profile" ng-show="!$state.includes('app.profile')" menu-close ng-if="user.email"
@@ -23,77 +20,9 @@
           Map
         </ion-item>
 
-        <!-- This is the menu for the activities filters -->
+        <!-- This is the menu for the activities filters --/>
 
-        <ion-item ng-show="$state.includes('app.activities')">
-          <ul class="list">
-            <div class="item item-toggle">
-              Users I follow
-              <label class="toggle toggle-positive">
-                <input type="checkbox"
-                       ng-model="activityData.filters.follow"
-                       ng-checked="activityData.filters.follow">
-                <div class="track">
-                  <div class="handle"></div>
-                </div>
-              </label>
-            </div>
-            <div></div>
-            <div class="list">
-              <label class="item item-input">
-                <i class="icon ion-search placeholder-icon"></i>
-                <input type="text"
-                       placeholder="Change Location"
-                       ng-model="activityData.filters.location">
-              </label>
-            </div>
-            <div class="list">
-              <button class="button-icon"
-                      ng-repeat="star in stars track by $index"
-                      ng-click="toggleStars($index+1)">
-                <i class="icon" ng-class="star ? 'ion-android-star': 'ion-android-star-outline'"></i>
-              </button>
-            </div>
-            <div class="list">
-              <label class="item item-input">Difficulty</label>
-              <ion-list>
-                <ion-checkbox ng-model="activityData.filters.difficulty1"
-                              ng-checked="activityData.filters.difficulty1">
-                  {{difficulty_words[0]}}
-                </ion-checkbox>
-                <ion-checkbox ng-model="activityData.filters.difficulty2"
-                              ng-checked="activityData.filters.difficulty2">
-                  {{difficulty_words[1]}}
-                </ion-checkbox>
-                <ion-checkbox ng-model="activityData.filters.difficulty3"
-                              ng-checked="activityData.filters.difficulty3">
-                  {{difficulty_words[2]}}
-                </ion-checkbox>
-              </ion-list>
-            </div>
-            <div class="list">
-              <div class="item item-input wrap-label">
-                <ion-list ng-repeat="icon in category_icons" class="margin-10">
-                  <div class="row" ng-click="activityData.filters.category[$index + 1] = !activityData.filters.category[$index + 1];">
-                    <div>
-                      <img class="menu-icon" ng-src="{{icon}}"  ng-if="activityData.filters.category[$index + 1]">
-                      <img class="menu-icon menu-icon-unselected" ng-src="{{icon}}" ng-if="!activityData.filters.category[$index + 1]">
-                    </div>
-                  </div>
-                </ion-list>
-              </div>
-            </div>
-            <div class="list">
-              <ion-list>
-                <ion-checkbox
-                  ng-model="activityData.filters.default"
-                  ng-checked="activityData.filters.default">Set search as default
-                </ion-checkbox>
-              </ion-list>
-            </div>
-          </ul>
 
-        </ion-item>
       </ion-list>
     </ion-content>
     <ion-footer-bar ng-show="$state.includes('app.activities')">
@@ -106,21 +35,4 @@
 
     </ion-footer-bar>
   </ion-side-menu>
-</ion-side-menus>
-
-<ion-tabs ng-class="{'tabs-item-hide': hideTabs}" class="tabs-icon-top tabs-color-active-positive">
-  <!-- Activity Feed Tab -->
-  <ion-tab title="Activity Feed" icon-off="ion-calendar" icon-on="ion-calendar" href="#/app/activities">
-    <ion-nav-view name="tab-activities-view"></ion-nav-view>
-  </ion-tab>
-
-  <!-- Map Tab -->
-  <ion-tab title="Map" icon-off="ion-map" icon-on="ion-map" href="#/app/map">
-    <ion-nav-view name="tab-map-view"></ion-nav-view>
-  </ion-tab>
-
-  <!-- Profile Tab -->
-  <ion-tab title="Profile" icon-off="ion-navicon-round" icon-on="ion-navicon-round" href="#/app/profile">
-    <ion-nav-view name="tab-profile-view"></ion-nav-view>
-  </ion-tab>
-</ion-tabs>
+</ion-side-menus>-->
