hide tabs on map view

--- a/www/templates/map.html
+++ b/www/templates/map.html
@@ -1,4 +1,4 @@
-<ion-view title="Map">
+<ion-view title="Map" hide-tabs>
   <ion-nav-buttons side="left">
     <button menu-toggle="left" class="button button-icon icon ion-navicon"></button>
   </ion-nav-buttons>
@@ -10,5 +10,4 @@
     <button class="button button-small button-assertive" ng-click="stopTracking()" ng-disabled="!inProgress">Stop</button>
     <button class="button button-small button-assertive" ng-click="clearRoute()" ng-disabled="!hasRecording">Clear</button>
   </div>
-
 </ion-view>
