create activities via a modal view

--- a/www/templates/activities/filter_modal.html
+++ b/www/templates/activities/filter_modal.html
@@ -1,13 +1,13 @@
 <ion-modal-view>
   <ion-header-bar class="bar-positive">
     <div class="buttons">
-      <button class="button icon-left ion-chevron-left button-clear" ng-click="filterModal.hide()">
-        back
+      <button class="button button-clear" ng-click="filterModal.hide()">
+        Cancel
       </button>
     </div>
     <h1 class="title">Filter Activities</h1>
     <div class="buttons">
-      <button class="button" ng-click="setFilters()">
+      <button class="button button-clear" ng-click="setFilters()">
         Apply Filter
       </button>
     </div>
