--- a/www/templates/activities.html
+++ b/www/templates/activities.html
@@ -3,7 +3,7 @@
     <button class="button button-icon icon ion-funnel" ng-click="filterModal.show()"></button>
   </ion-nav-buttons>
   <ion-nav-buttons side="right">
-    <button class="button button-icon icon ion-plus-round" ui-sref="app.create_activity"></button>
+    <button class="button button-icon icon ion-plus-round" ng-click="createModal.show()"></button>
   </ion-nav-buttons>
 
   <ion-content class="padding has-header">
