replaces icon for add waypoint button

--- a/www/templates/map.html
+++ b/www/templates/map.html
@@ -9,7 +9,7 @@
         <i class="ion-plus-circled"></i>
       </button>
       <button class="button button-clear button-small" ng-disabled="true">
-        <i class="ion-play"></i>
+        <i class="ion-pinpoint"></i>
       </button>
       <button class="button button-clear button-small" ng-click="stopTracking()" ng-disabled="!inProgress">
         <i class="ion-stop"></i>
