--- a/www/templates/map.html
+++ b/www/templates/map.html
@@ -1,7 +1,4 @@
-<ion-view title="Map" hide-tabs>
-  <ion-nav-buttons side="left">
-    <button menu-toggle="left" class="button button-icon icon ion-navicon"></button>
-  </ion-nav-buttons>
+<ion-view title="AdventureMap">
   <div id="map-container"></div>
 
 
