--- a/www/templates/profile.html
+++ b/www/templates/profile.html
@@ -56,7 +56,7 @@
     <div class="item item-divider">
     </div>
 
-    <button class="button button-full button-outline button-assertive no-margin" ng-controller="authController" ng-click="">
+    <button class="button button-full button-outline button-assertive no-margin" ng-controller="authController" ng-click="signOut()">
       Log Out
     </button>
 
