--- a/www/templates/profile.html
+++ b/www/templates/profile.html
@@ -1,4 +1,4 @@
-<ion-view class="profile-view" view-title="Profile">
+<ion-view cache-view="false"  class="profile-view" view-title="Profile">
   <ion-nav-buttons side="right">
     <button class="button button-positive" ng-click="">
       Edit
@@ -53,7 +53,12 @@
         <i class="icon ion-ios-arrow-right"></i>
       </ion-item>
     </ion-list>
-    <div class="item item-divider">
+    <div class="item item-divider" ng-controller="userController">
+      <ion-item class="item item-icon-right list-item" ng-repeat="file in files">
+        <span class="main-text" ng-click="showFile(file)">{{file.fileName}}</span>
+        <span class="badge">{{file.date | date }}</span>
+      </ion-item>
+
     </div>
 
     <button class="button button-full button-outline button-assertive no-margin" ng-controller="authController" ng-click="signOut()">
