--- a/www/templates/profile.html
+++ b/www/templates/profile.html
@@ -1,4 +1,4 @@
-<ion-view cache-view="false"  class="profile-view" view-title="Profile">
+<ion-view cache-view="false" class="profile-view" view-title="Profile">
   <ion-nav-buttons side="right">
     <button class="button button-positive" ng-click="">
       Edit
@@ -55,13 +55,18 @@
     </ion-list>
     <div class="item item-divider" ng-controller="userController">
       <ion-item class="item item-icon-right list-item" ng-repeat="file in files">
-        <span class="main-text" ng-click="showFile(file)">{{file.fileName}}</span>
+        <span class="main-text" ng-click="showFile(file)">
+          <small>
+            {{file.fileName}}
+          </small>
+          </span>
         <span class="badge"><small>Created:{{file.date | date }} <br> at: {{file.date | date : 'hh:m'}}</small>  </span>
       </ion-item>
 
     </div>
 
-    <button class="button button-full button-outline button-assertive no-margin" ng-controller="authController" ng-click="signOut()">
+    <button class="button button-full button-outline button-assertive no-margin" ng-controller="authController"
+            ng-click="signOut()">
       Log Out
     </button>
 
