--- a/www/templates/profile.html
+++ b/www/templates/profile.html
@@ -52,19 +52,13 @@
         <span class="badge">48</span>
         <i class="icon ion-ios-arrow-right"></i>
       </ion-item>
-    </ion-list>
-    <div class="item item-divider" ng-controller="userController">
-      <ion-item class="item item-icon-right list-item" ng-repeat="file in files">
-        <span class="main-text" ng-click="showFile(file)">
-          <small>
-            {{file.fileName}}
-          </small>
-          </span>
-        <span class="badge"><small>Created:{{file.date | date }} <br> at: {{file.date | date : 'hh:m'}}</small>  </span>
+      <ion-item class="item item-icon-right list-item" ui-sref="app.my-recordings">
+        <span class="main-text">My Recordings</span>
+        <span class="badge">{{files.length}}</span>
+        <i class="icon ion-ios-arrow-right"></i>
       </ion-item>
 
-    </div>
-
+    </ion-list>
     <button class="button button-full button-outline button-assertive no-margin" ng-controller="authController"
             ng-click="signOut()">
       Log Out
