--- a/www/templates/profile/file.html
+++ b/www/templates/profile/file.html
@@ -4,7 +4,7 @@
       <button class="button button-icon ion-chevron-left button-clear" ng-click="closeModal()">
       </button>
     </div>
-    <h1 class="title">{{ object.fileName }}</h1>
+    <h1 class="title">{{ fileName }}</h1>
   </ion-header-bar>
   <ion-content>
     {{object}}
