--- a/www/templates/profile/my-recordings.html
+++ b/www/templates/profile/my-recordings.html
@@ -11,6 +11,14 @@
           <small>
             Created: {{file.date | date }} <br> at: {{file.date | date : 'hh:m'}}</span>
         </small>
+        <ion-option-button class="button button-positive"
+                           ng-click="">
+          Attach to Activity
+        </ion-option-button>
+        <ion-option-button class="button button-assertive"
+                           ng-click="">
+          Delete
+        </ion-option-button>
       </ion-item>
     </ion-list>
   </ion-content>
