disables right swipe for back navigation

--- a/www/templates/profile/my-recordings.html
+++ b/www/templates/profile/my-recordings.html
@@ -1,4 +1,4 @@
-<ion-view title="My Recordings">
+<ion-view can-swipe-back="false" title="My Recordings">
   <ion-content>
     <ion-list ng-repeat="file in files">
       <ion-item class="item item-icon-right list-item" >
