--- a/www/templates/profile.html
+++ b/www/templates/profile.html
@@ -1,4 +1,4 @@
-<ion-view cache-view="false" class="profile-view" view-title="Profile">
+<ion-view cache-view="false" can-swipe-back="false" class="profile-view" view-title="Profile">
   <ion-nav-buttons side="right">
     <button class="button button-positive" ng-click="">
       Edit
