--- a/www/templates/activities/create.html
+++ b/www/templates/activities/create.html
@@ -45,6 +45,14 @@
             <i class="icon ion-images"></i>
             Add Images
           </a>
+          <a class="item item-icon-left" ng-click="selectRecording()">
+            <i class="icon ion-videocamera"></i>
+            Add Recorded route
+          </a>
+          <a class="item item-icon-left" ng-click="selectWaypoint()">
+            <i class="icon ion-pinpoint"></i>
+            Add Waypoint
+          </a>
         </div>
       </div>
 
