adds conditional display of files in filePicker depending on what we want to see

--- a/www/templates/activities/create.html
+++ b/www/templates/activities/create.html
@@ -45,11 +45,11 @@
             <i class="icon ion-images"></i>
             Add Images
           </a>
-          <a class="item item-icon-left" ng-click="selectRecording()">
+          <a class="item item-icon-left" ng-click="openPicker('Recording')">
             <i class="icon ion-videocamera"></i>
             Add Recorded route
           </a>
-          <a class="item item-icon-left" ng-click="selectWaypoint()">
+          <a class="item item-icon-left" ng-click="openPicker('Waypoint')">
             <i class="icon ion-pinpoint"></i>
             Add Waypoint
           </a>
