WIP selecting and uploading file to AWS

--- a/www/templates/activities/pick_files.html
+++ b/www/templates/activities/pick_files.html
@@ -9,7 +9,7 @@
   </ion-header-bar>
   <ion-content>
     <ion-list ng-repeat="file in files">
-      <ion-item class="item item-icon-right list-item" >
+      <ion-item class="item item-icon-right list-item" ng-click="chooseFile(file)">
         <span class="main-text" ng-click="showFile(file)">
            <small>
              {{file.fileName}}
