working upload and attach to activity solution

--- a/www/templates/activities/create.html
+++ b/www/templates/activities/create.html
@@ -45,7 +45,7 @@
             <i class="icon ion-images"></i>
             Add Images
           </a>
-          <a class="item item-icon-left" ng-click="openPicker('Recording')">
+          <a class="item item-icon-left" ng-click="openPicker('Route')">
             <i class="icon ion-videocamera"></i>
             Add Recorded route
           </a>
