--- a/www/templates/activities/show.html
+++ b/www/templates/activities/show.html
@@ -28,6 +28,12 @@
             <p>
               {{activity.body}}
             </p>
+            <p>
+              Routes {{activity.routes.length}}
+            </p>
+            <p>
+              Waypoints {{activity.waypoints.length}}
+            </p>
           </div>
         </div>
         <div class='row centered'>
