Add user description to profile page

--- a/www/templates/profile.html
+++ b/www/templates/profile.html
@@ -18,6 +18,9 @@
           <h5 class="username">@{{user.nickname}}</h5>
         </a>
         <p class="user-social">
+          {{user.description}}
+        </p>
+        <p class="user-social">
           <i class="ion-heart"></i>
           <span>74</span> &nbsp;
           <i class="ion-location"></i>
