Create profileFollowersController, route to page

--- a/www/templates/profile.html
+++ b/www/templates/profile.html
@@ -47,7 +47,7 @@
         <span class="badge">{{user.counts.followings}}</span>
         <i class="icon ion-ios-arrow-right"></i>
       </ion-item>
-      <ion-item class="item item-icon-right list-item" ui-sref="main.profile.following">
+      <ion-item class="item item-icon-right list-item" ui-sref="app.followers">
         <span class="main-text">Followers</span>
         <span class="badge">{{user.counts.followers}}</span>
         <i class="icon ion-ios-arrow-right"></i>
