Style user list on followers page

--- a/www/templates/profile/followers.html
+++ b/www/templates/profile/followers.html
@@ -1,9 +1,26 @@
 <ion-view title="Followers">
-  <ion-nav-buttons side="right">
-    <!--<button class="button button-icon icon ion-plus-round" ng-controller="activitiesController" ng-click="createModal.show()"></button>-->
-  </ion-nav-buttons>
+  <!-- ion-nav-title provides the back button -->
+  <ion-nav-title> Followers</ion-nav-title>
+
+  <!--<ion-nav-buttons side="right">-->
+  <!--<button class="button button-icon icon ion-plus-round" ng-controller="activitiesController" ng-click="createModal.show()"></button>-->
+  <!--</ion-nav-buttons>-->
 
   <ion-content>
-    Followers page.
+    <ion-list class="profile-list">
+      <div ng-repeat="follower in myFollowers">
+        <div class="item item-divider profile-divider"></div>
+        <ion-item class="item item-icon-right list-item auto-height" ui-sref="user.show">
+          <!-- should link to user's profile page -->
+          <span class="main-text">{{follower.name}}
+          <span class="badge icon-badge">
+            <img ng-src="{{profileImage($index)}}">
+          </span>
+          </span>
+
+          <i class="icon ion-ios-arrow-right"></i>
+        </ion-item>
+      </div>
+    </ion-list>
   </ion-content>
 </ion-view>
