--- a/www/templates/profile.html
+++ b/www/templates/profile.html
@@ -42,7 +42,7 @@
         <span class="badge">{{user.counts.my_activities}}</span>
         <i class="icon ion-ios-arrow-right"></i>
       </ion-item>
-      <ion-item class="item item-icon-right list-item" ui-sref="main.profile.following">
+      <ion-item class="item item-icon-right list-item" ui-sref="app.followings">
         <span class="main-text">Following</span>
         <span class="badge">{{user.counts.followings}}</span>
         <i class="icon ion-ios-arrow-right"></i>
