Rename CSS class

--- a/www/templates/profile/followings.html
+++ b/www/templates/profile/followings.html
@@ -6,7 +6,7 @@
     <ion-list class="profile-list">
       <div ng-repeat="following in myFollowings">
         <div class="item item-divider smaller-profile-divider"></div>
-        <ion-item class="item item-icon-right list-item auto-height" ui-sref="user.show">
+        <ion-item class="item item-icon-right list-item height-50" ui-sref="user.show">
           <!-- should link to user's profile page -->
           <span class="main-text">{{following.name}}
           <span class="badge icon-badge">
