--- a/www/templates/profile/followers.html
+++ b/www/templates/profile/followers.html
@@ -6,7 +6,7 @@
     <ion-list class="profile-list">
       <div ng-repeat="follower in myFollowers">
         <div class="item item-divider smaller-profile-divider"></div>
-        <ion-item class="item item-icon-right list-item auto-height" ui-sref="user.show">
+        <ion-item class="item item-icon-right list-item height-50" ui-sref="user.show">
           <!-- should link to user's profile page -->
           <span class="main-text">{{follower.name}}
           <span class="badge icon-badge">
