--- a/www/templates/directives/activity-feed.html
+++ b/www/templates/directives/activity-feed.html
@@ -22,17 +22,17 @@
         </div>
       </div>
       <div class='row centered'>
-        <div class="blue" ng-if=activity.user.likes ng-click="unlikeActivity(activity.id)">
+        <div class="blue" ng-if=activity.user.likes ng-click="unlikeActivity(activity.id); activity.user.likes = !activity.user.likes">
           <div class='col'>
             <i class="icon ion-thumbsup card-bottom"></i>
             <!--<img src="img/icons/like.svg">-->
             <p>Unlike</p>
           </div>
         </div>
-        <div ng-if=!activity.user.likes ng-click="likeActivity(activity.id, $event)">
+        <div ng-if=!activity.user.likes ng-click="likeActivity(activity.id, $event); activity.user.likes = !activity.user.likes">
           <div class='col'>
             <i class="icon ion-thumbsup card-bottom"></i>
-            <!--<img src="img/icons/like.svg">-->
+            <!--<img src="img/icons/like.svg"> This is the icon sent by Morgan -->
             <p>Like</p>
           </div>
         </div>
