--- a/www/templates/directives/activity-feed.html
+++ b/www/templates/directives/activity-feed.html
@@ -9,7 +9,7 @@
       <p>{{activity.created_at}}</p>
     </div>
 
-    <div class="item item-body gray" >
+    <div class="item item-body gray">
       <span>{{activity.category}}</span>, <span>{{activity.difficulty | difficultyWord}}</span>
       <div class="item gray card item-inner" ng-click="navigateToActivity(activity)">
         <!--<img class="full-image" src="img/dummy_images/snow.jpg">-->
@@ -22,14 +22,16 @@
         </div>
       </div>
       <div class='row centered'>
-        <div class="blue" ng-if=activity.user.likes ng-click="unlikeActivity(activity.id); activity.user.likes = !activity.user.likes">
+        <div class="blue" ng-if=activity.user.likes
+             ng-click="unlikeActivity(activity.id); activity.user.likes = !activity.user.likes">
           <div class='col'>
             <i class="icon ion-thumbsup card-bottom"></i>
             <!--<img src="img/icons/like.svg">-->
             <p>Unlike</p>
           </div>
         </div>
-        <div ng-if=!activity.user.likes ng-click="likeActivity(activity.id, $event); activity.user.likes = !activity.user.likes">
+        <div ng-if=!activity.user.likes
+             ng-click="likeActivity(activity.id, $event); activity.user.likes = !activity.user.likes">
           <div class='col'>
             <i class="icon ion-thumbsup card-bottom"></i>
             <!--<img src="img/icons/like.svg"> This is the icon sent by Morgan -->
