extract (most of) the like/unlike functionality to a service

--- a/www/templates/directives/activity-feed.html
+++ b/www/templates/directives/activity-feed.html
@@ -31,7 +31,7 @@
           </div>
         </div>
         <div ng-if=!activity.user.likes
-             ng-click="likeActivity(activity.id, $event); activity.user.likes = !activity.user.likes">
+             ng-click="likeActivity(activity.id); activity.user.likes = !activity.user.likes">
           <div class='col'>
             <i class="icon ion-thumbsup card-bottom"></i>
             <!--<img src="img/icons/like.svg"> This is the icon sent by Morgan -->
