--- a/www/templates/directives/activity-feed.html
+++ b/www/templates/directives/activity-feed.html
@@ -1,4 +1,3 @@
-
 <div class="list card" ng-repeat="activity in activities">
   <div ng-controller="showActivityController" ng-click="navigateToActivity(activity)">
     <div class="item item-avatar gray">
@@ -11,9 +10,19 @@
     </div>
 
     <div class="item item-body gray">
-      <span>{{activity.category}}</span>, <span>{{activity.difficulty | difficultyWord}}</span>
+      <div>
+
+        <span class="difficulty-icon">
+          <span class="activity-category">{{activity.category}}</span>
+          <i class="icon ion-ios-ionic-outline" ng-if="activity.difficulty === 1"></i>
+          <i class="icon ion-ios-ionic" ng-if="activity.difficulty === 2"></i>
+          <i class="icon ion-social-angular" ng-if="activity.difficulty === 3"></i>
+        </span>
+        <!--, <span>{{activity.difficulty | difficultyWord}}</span>-->
+      </div>
+
       <div class="item gray card item-inner">
-        <display-first-image images_for="{{activity}}" ></display-first-image>
+        <display-first-image images_for="{{activity}}"></display-first-image>
         <div class="padding">
           <h3>{{activity.title}}</h3>
           <p>
@@ -31,14 +40,14 @@
           <p>Recommend</p>
         </div>
         <div class='col'>
-          <div class="blue" ng-if=activity.user.following >
+          <div class="blue" ng-if=activity.user.following>
               <span class="count-icon">
               <i class="icon ion-person card-bottom"></i>
                 <span class="count-span">{{activity.user.followers_count}}</span>
                 <p>Following</p>
               </span>
           </div>
-          <div ng-if=!activity.user.following >
+          <div ng-if=!activity.user.following>
               <span class="count-icon">
               <i class="icon ion-person card-bottom"></i>
                 <span class="count-span count-span-follow">{{activity.user.followers_count}}</span>
