Use bookmark and save instead of recommend and star

--- a/www/templates/activities/show.html
+++ b/www/templates/activities/show.html
@@ -47,8 +47,10 @@
             <p>Interested</p>
           </div>
           <div class='col'>
-            <i class="icon ion-android-star-outline card-bottom"></i>
-            <p>Recommend</p>
+            <i class="icon ion-bookmark card-bottom"></i>
+            <p>
+              Save
+            </p>
           </div>
           <div class="col blue" ng-if=activity.user.following >
               <span class="count-icon">
