--- a/www/templates/directives/activity-feed.html
+++ b/www/templates/directives/activity-feed.html
@@ -31,8 +31,8 @@
           <p>Interested</p>
         </div>
         <div class='col'>
-          <i class="icon ion-android-star-outline card-bottom"></i>
-          <p>Recommend</p>
+          <i class="icon ion-bookmark card-bottom"></i>
+          <p>Save</p>
         </div>
         <div class='col'>
           <div class="blue" ng-if=activity.user.following>
