--- a/scss/old-styles.scss
+++ b/scss/old-styles.scss
@@ -67,6 +67,34 @@
   content: url('/img/icons/bars3.png') !important;
 }
 
+.activity-images {
+  margin: 5px auto 5px auto;
+  text-align: center;
+  width: 95%;
+  position: relative;
+}
+
+.activity-image-unselected {
+  opacity: .3;
+  //position: relative;
+  width: 100%;
+}
+.activity-image-selected {
+  width: 100%;
+}
+.activity-name {
+  position: absolute;
+  //width: 100%;
+  margin: 0;
+  //position: absolute;
+  top: 50%;
+  //left: 50%;
+  text-transform: uppercase;
+  text-align: center;
+  text-wrap: normal;
+
+}
+
 /*****************
 PROFILE
  */
