--- a/www/templates/auth/activity_selection.html
+++ b/www/templates/auth/activity_selection.html
@@ -8,9 +8,11 @@
   </ion-header-bar>
 
   <ion-content class="padding has-header">
-    <div ng-repeat="uri in activity_images">
-      <img ng-src="{{uri}}">
-    </div>
+      <div class="activity-images" ng-repeat="uri in activity_images">
+        <img ng-src="{{uri}}" class="activity-image-unselected">
+        <h3 class="activity-name">{{category_words[$index]}}</h3>
+      </div>
+
     <button class="button action-button button-block button-balanced" ng-click="signup()">SIGN UP</button>
   </ion-content>
 </ion-view>
