--- a/www/templates/profile.html
+++ b/www/templates/profile.html
@@ -35,7 +35,7 @@
     </div>
     <ion-list class="profile-list">
       <div class="item item-divider profile-divider"></div>
-      <ion-item class="item item-icon-right list-item" ui-sref="app.saved">
+      <ion-item class="item item-icon-right list-item" ui-sref="app.my-saved-activities">
         <span class="main-text">My Saved Activities</span>
         <span class="badge">{{user.counts.my_saved_activities}}</span>
         <i class="icon ion-ios-arrow-right"></i>
