--- a/www/templates/directives/activity-feed.html
+++ b/www/templates/directives/activity-feed.html
@@ -51,9 +51,25 @@
             <!--<img src="img/icons/like.svg"> This is the icon sent by Morgan -->
           </div>
         </div>
+        <!--<div class='col'>-->
+          <!--<i class="icon ion-bookmark card-bottom"></i>-->
+          <!--<p>Save</p>-->
+        <!--</div>-->
         <div class='col'>
-          <i class="icon ion-bookmark card-bottom"></i>
-          <p>Save</p>
+          <div class="blue" ng-if=activity.user.saves>
+              <span class="count-icon">
+              <i class="icon ion-bookmark card-bottom"></i>
+                <span class="count-span ">{{activity.saves_count}}</span>
+                <p>Saved</p>
+              </span>
+          </div>
+          <div ng-if=!activity.user.saves>
+              <span class="count-icon">
+              <i class="icon ion-bookmark card-bottom"></i>
+                <span class="count-span count-span-follow">{{activity.saves_count}}</span>
+                <p>Save</p>
+              </span>
+          </div>
         </div>
         <div class='col'>
           <div class="blue" ng-if=activity.user.following>
