--- a/www/templates/directives/activity-feed.html
+++ b/www/templates/directives/activity-feed.html
@@ -51,10 +51,6 @@
             <!--<img src="img/icons/like.svg"> This is the icon sent by Morgan -->
           </div>
         </div>
-        <!--<div class='col'>-->
-          <!--<i class="icon ion-bookmark card-bottom"></i>-->
-          <!--<p>Save</p>-->
-        <!--</div>-->
         <div class='col'>
           <div class="blue" ng-if=activity.user.saves>
               <span class="count-icon">
@@ -63,7 +59,8 @@
                 <p>Saved</p>
               </span>
           </div>
-          <div ng-if=!activity.user.saves>
+          <div ng-if=!activity.user.saves
+               ng-click="saveActivity(activity.id); activity.user.saves = !activity.user.saves; activity.saves_count = activity.saves_count + 1;">
               <span class="count-icon">
               <i class="icon ion-bookmark card-bottom"></i>
                 <span class="count-span count-span-follow">{{activity.saves_count}}</span>
